# donna

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: pyproject.toml
backend/backend/: credentials.json  functions.py  google_functions.py  main.py  realtime.py  utils.py
backend/scripts/: scripts.py
backend/tests/: setup_calls_outbound.py
backend/twilio/: main.py
backend/twilio/utils/: print_timestamp.py
frontend/: auth-initialize.ts  base-url.ts  edgedb.toml  edgedb.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/actions/: updateGeneralPreference.ts
frontend/app/auth/[...auth]/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/new/: page.tsx
frontend/app/error/: page.tsx
frontend/app/status/: page.tsx
frontend/components/: AddRuleCard.tsx  Dashboard.tsx  EditRuleModal.tsx  ExistingRulesCard.tsx  GeneralPreferenceCard.tsx  Logo.tsx  Navbar.tsx  PhoneNumberCard.tsx  components-general-preference-card.tsx
frontend/dbschema/: default.esdl
frontend/dbschema/migrations/: 00001-m1qbjty.edgeql  00002-m1xevzc.edgeql
frontend/lib/: utils.ts
